feat: switch spirit trade recipes to be single input/output and no longer use shapeless recipes as backend